--- a/05-07-23 JS ex1/style.css
+++ b/05-07-23 JS ex1/style.css
@@ -1,5 +1,21 @@
 * {
     padding: 0;
-    margin: 0;
+    margin: 100px;
     box-sizing: border-box;
+    text-align: center;
+    font-size: 44px;
+}
+
+button {
+    width: 30%;
+    padding: 20px;
+    font-size: 24px;
+}
+
+.alt01 {
+    background-color: coral;
+}
+
+.alt02 {
+    background-color: olivedrab;
 }
