--- a/05-07-23 JS ex1/style.css
+++ b/05-07-23 JS ex1/style.css
@@ -1,21 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Karla:wght@200;500;700&display=swap');
+
+:root {
+    --fonte-titulo: 'Karla', sans-serif;
+    --fonte-texto: 'Inconsolata', monospace;
+}
+
 * {
     padding: 0;
     margin: 100px;
     box-sizing: border-box;
     text-align: center;
-    font-size: 44px;
+    font-size: 44px; 
+}
+
+h1 {
+    color: #3b3b3b;
+    font-family: var(--fonte-titulo);
+}
+
+h2 {
+    font-family: var(--fonte-texto);
 }
 
 button {
     width: 30%;
     padding: 20px;
     font-size: 24px;
+    border-radius: 10px;
+    font-family: var(--fonte-texto);
+
+}
+
+button:hover {
+    transition: 0.5s;
+    font-size: 28px;
 }
 
 .alt01 {
-    background-color: coral;
+    background-color: #EAC7C7;
 }
 
 .alt02 {
-    background-color: olivedrab;
+    background-color: #A0C3D2;
 }
