--- a/05-07-23 JS ex1/style.css
+++ b/05-07-23 JS ex1/style.css
@@ -10,7 +10,7 @@
     margin: 100px;
     box-sizing: border-box;
     text-align: center;
-    font-size: 44px; 
+    font-size: 2.75em;
 }
 
 h1 {
