--- a/05-07-23 funções 02/style.css
+++ b/05-07-23 funções 02/style.css
@@ -7,10 +7,9 @@
 
 * {
     padding: 0;
-    margin: 100px;
+    margin: 3%;
     box-sizing: border-box;
     text-align: center;
-    font-size: 2.75em;
 }
 
 h1 {
@@ -20,6 +19,11 @@ h1 {
 
 h2 {
     font-family: var(--fonte-texto);
+}
+
+h6 {
+    font-family: var(--fonte-texto);
+    font-size: 1em;
 }
 
 button {
