--- a/12-07-23/style.css
+++ b/12-07-23/style.css
@@ -1,10 +1,14 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Karla:wght@200;500;700&display=swap');
 
-    margin: 0;
+:root {
+    --fonte-titulo: 'Karla', sans-serif;
+    --fonte-texto: 'Inconsolata', monospace;
+}
+
+* {
     box-sizing: border-box;
-    font-family: sans-serif;
-    text-align: center;
-    font-family: 64px;
-    font-family: 'Bellota', cursive;
-    background-color: antiquewhite;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(184, 221, 255);
+    list-style: none;
 }
