--- a/12-07-23 while/style.css
+++ b/12-07-23 while/style.css
@@ -12,3 +12,8 @@
     background-color: rgb(184, 221, 255);
     list-style: none;
 }
+
+.resultado {
+    padding: 10px;
+    background-color: aqua;
+}
