--- a/12-07-23 while/style.css
+++ b/12-07-23 while/style.css
@@ -11,9 +11,64 @@
     padding: 0;
     background-color: rgb(184, 221, 255);
     list-style: none;
+    text-align: center;
+}
+
+h1 {
+    margin: 3%;
+    font-family: var(--fonte-titulo);
+    font-size: 2.2em;
+}
+
+h2 {
+    font-family: var(--fonte-texto);
+    font-size: 1.8em;
+    margin-bottom: 1%;
+}
+
+p {
+    font-family: var(--fonte-texto);
+    font-size: 1.2em;
+}
+
+h3 {
+    margin: 5% 0 2% 0;
+    font-family: var(--fonte-titulo);
+    font-size: 1.6em;
+}
+
+input {
+    font-family: var(--fonte-texto);
+    font-size: 1.4em;
+    padding: 16px 80px;
+    background-color: aliceblue;
+    margin-bottom: 3%;
+}
+
+button {
+    font-family: var(--fonte-texto);
+    font-size: 1em;
+  padding: 19px 20px;
+  background-color: rgb(132, 168, 222);
+  
+  
+}
+
+button:hover {
+    transition: 0.3s;
+    font-weight: bold;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: rgb(104, 144, 204);
 }
 
 .resultado {
-    padding: 10px;
-    background-color: aqua;
+    font-family: var(--fonte-texto);
+    font-size: 1.4em;
+    margin: auto auto;
+    border-radius: 10px;
+    width: 50%;
+    padding: 20px;
+    background-color: whitesmoke;
+    
 }
