--- a/10-07-23 JS if else/style.css
+++ b/10-07-23 JS if else/style.css
@@ -17,17 +17,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 10% 25%;
+  margin: 6%;
       
 }
 
 .conteudo {
-    width: 90%;
+    width: 80%;
     display: flex;
       justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
 }
 
 h1 {
@@ -36,15 +36,21 @@ h1 {
     font-size: 2.75em;
 }
 
-.subtitulo {
+h2 {
     font-size: 1.2em;
     font-family: var(--fonte-texto);
 }
 
-h2 {
+h3 {
     color: #5c4d4d;
-    font-size: 4em;
+    font-size: 3em;
     font-family: var(--fonte-titulo);
+}
+
+
+.subtitulo {
+    font-family: var(--fonte-texto);
+    text-align: center;
 }
 
 .resposta {
