--- a/19-07-23 ex 2/style.css
+++ b/19-07-23 ex 2/style.css
@@ -41,6 +41,7 @@ h6 {
     background-color: rgb(120, 197, 97);
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    cursor: pointer;
 }
 
 .botao:hover {
